<resources>
    <string name="app_name">Capstone</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_reason">This app need the geolocation permission for showing you the places that are close to you</string>
    <string name="permission_dialog_title">Need of geolocation permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="my_routes">My routes</string>
    <string name="my_places">My places</string>
    <string name="add_route">Add route</string>
    <string name="no_routes">There are no routes</string>
    <string name="route_name">Route name</string>
    <string name="attribution">Google attribution</string>
    <string name="address">Address:</string>
    <string name="mock_detail_name">Mexico City Metropolitan Cathedral</string>
    <string name="mock_address">Plaza de la Constitución S/N, Centro Histórico de la Cdad. de México, Centro, Cuauhtémoc, 06000 Ciudad de México, CDMX, Mexico,</string>
    <string name="add">Add to route</string>
    <string name="phone">Phone:</string>
    <string name="mock_phone">5533441122</string>
    <string name="click_info">Click here for more information</string>
    <string name="detail">Detail</string>
    <string name="add_place">The place was added to the route</string>
    <string name="success">Success</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="photo_detail">Photo</string>
    <string name="content_description_widget">Route name</string>
    <string name="title_widget">Routes</string>
    <string name="note">The application will delete the data every 30 minutes(Test time) due to a policy in Google</string>
    <string name="website">Website</string>
    <string name="note_notification">The application deleted the data in the database due to a policy in Google</string>
</resources>