<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".fragments.AddRouteFragment"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/my_routes"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_route"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_separator_dialog"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/design_default_color_primary_dark"
        app:layout_constraintTop_toBottomOf="@id/imageView"
         />

    <EditText
        android:id="@+id/edt_route_name"
        android:inputType="text"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frame_separator_dialog"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_route_name"
        >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            />

        <Button
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:id="@+id/ok_button"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>